<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.company.AddBranchActivity"
    android:background="@color/mainBackgroundColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            app:boxBackgroundColor="@color/mainBackgroundColor"
            app:hintTextColor="@color/actionBarColor"
            android:hint="@string/branchName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/branch_name_add_branch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColor="@color/white"
                android:inputType="text"
                android:textSize="20sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            app:boxBackgroundColor="@color/mainBackgroundColor"
            app:hintTextColor="@color/actionBarColor"
            android:hint="@string/branch_admin_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/branch_admin_email_add_branch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColor="@color/white"
                android:inputType="text"
                android:textSize="20sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            app:boxBackgroundColor="@color/mainBackgroundColor"
            app:hintTextColor="@color/actionBarColor"
            app:passwordToggleEnabled="true"
            android:hint="@string/branch_admin_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/branch_admin_password_add_branch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColor="@color/white"
                android:inputType="textPassword"
                android:textSize="20sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/numberOfQueue"
            android:layout_gravity="center"
            android:textSize="20sp"/>

        <RadioGroup
            android:id="@+id/radio_group_queue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:checkedButton="@id/radio_button_one_queue">
            <RadioButton
                android:id="@+id/radio_button_one_queue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/_1"
                android:layout_marginHorizontal="5dp"/>
            <RadioButton
                android:id="@+id/radio_button_two_queue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/_2"
                android:layout_marginHorizontal="5dp"/>
        </RadioGroup>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            app:boxBackgroundColor="@color/mainBackgroundColor"
            app:hintTextColor="@color/actionBarColor"
            android:hint="@string/first_queue_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/queue_one_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColor="@color/white"
                android:inputType="text"
                android:textSize="20sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/queue_two_name_layout"
            style="@style/TextInputLayout"
            app:boxBackgroundColor="@color/mainBackgroundColor"
            app:hintTextColor="@color/actionBarColor"
            android:hint="@string/second_queue_name"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/queue_two_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColor="@color/white"
                android:inputType="text"
                android:textSize="20sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/location_icon_add_branch_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:background="@drawable/location_icon"/>





    </LinearLayout>

    <Button
        android:id="@+id/addBranch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_margin="15dp"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cancel_add_branch"/>
    <Button
        android:id="@+id/cancel_add_branch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_margin="15dp"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <RelativeLayout
        android:id="@+id/loadingPanel_addBranch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>