<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.admin.StatisticActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType = "centerCrop"
        android:alpha="0.6"
        android:src="@drawable/admin_background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="12dp"
        android:padding="10dp"
        android:background="@color/notificationBarColor"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistics"
            android:textSize="23sp"
            android:textColor="@color/white"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:text="@string/number_of_companies"
                android:layout_marginEnd="5dp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/company_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:text="@string/number_of_customers"
                android:layout_marginEnd="5dp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/customer_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:text="@string/number_of_branches"
                android:layout_marginEnd="5dp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/branches_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:text="@string/number_of_queues"
                android:layout_marginEnd="5dp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/queues_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:textColor="@color/white"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:text="@string/average_waiting_of_all_queues"
                android:layout_marginEnd="5dp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/average_waiting_time_of_all_queues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:textColor="@color/white"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:text="@string/ticket_complete"
                android:layout_marginEnd="5dp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/complete_ticket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:textColor="@color/white"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:text="@string/cancel_ticket_"
                android:layout_marginEnd="5dp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/cancel_ticket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:textColor="@color/white"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:text="@string/out_range_the_branch"
                android:layout_marginEnd="5dp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/out_range_ticket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:textColor="@color/white"/>

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>