<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.branch_manager.BranchAdminActivity">


<LinearLayout
    android:id="@+id/linearLayout_branch_admin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="gone">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/queues"
        android:layout_margin="5dp"
        android:gravity="center"
        android:textSize="27sp"/>


        <Button
            android:id="@+id/branch_admin_queue1_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/queueName"
            android:textSize="20sp"
            android:layout_margin="15dp"/>


        <Button
            android:id="@+id/branch_admin_queue2_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/queueName"
            android:textSize="20sp"
            android:layout_margin="15dp"
            android:visibility="gone"/>

</LinearLayout>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progress_bar_branch_admin"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/log_out_button_branch_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:textSize="14sp"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>